# entsoe-project

./: .env.example  .gitignore  README.md  catalog.yaml  config.yaml  ingestion_jobs.yaml  pyproject.toml
dagster/: pyproject.toml
dagster/src/entsoe_dagster/: utils.py
dagster/src/entsoe_dagster/defs/: models.py  resources.py
dagster/src/entsoe_dagster/defs/ingestion/entsoe/: assets.py
dagster/src/entsoe_dagster/defs/staging/: assets.py
src/entsoe_dagster/defs/: assets.py  resources.py
src/entsoe_dagster/defs/ingestion/entsoe/: assets.py  models.py
src/entsoe_dagster/defs/staging/: assets.py
src/entsoe_project/: paths.py  reader.py  resources.py
src/entsoe_project/schema/: ingestion.py  staging.py
src/entsoe_project/transform_defs/ingestion/: entsoe.py
src/entsoe_project/transform_defs/staging/: entsoe.py
src/entsoe_project/typed_defs/: catalog.py  config.py
