[project]
name = "dagster_quickstart"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "dagster==1.12.0",
    "dagster-duckdb>=0.28.0",
    "duckdb>=1.4.2",
    "entsoe-py>=0.7.8",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.3",
]


[tool.uv]
package = true

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "streamlit>=1.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }
packages = ["src/entsoe_dagster"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "entsoe_dagster"
registry_modules = [
    "dagster_quickstart.components.*",
]
