[project]
name = "dagster_quickstart"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "dagster==1.12.0",
    "dagster-duckdb>=0.28.0",
    "dagster-pandera>=0.28.0",
    "duckdb>=1.4.2",
]


[tool.uv]
package = true

[tool.uv.sources]
entsoe-project = { path = "../" }

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }
packages = ["src/entsoe_dagster"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "entsoe_dagster"
registry_modules = [
    "dagster_quickstart.components.*",
]
